* Move over mercury-plot from the Mercury package, add a bunch of      documentation; fix a few minor bugs/warnings.    * Add in a bunch of example mercury scripts
doc/mercury-examples/*: a collection of example scripts using mercury

src/Plot/Mercury.pm: package that gets loaded into the save evaluation
  part of mercury to give the user access to various utility routines
  when writing mercury scripts.

src/mercury-plot.in: the actual mercury script; extended from the
  original one in Mercury to add in a bit of documentation and to move
  over to the style of using perl that works with configure.  Also fixed
  a few warnings about sub foo { my $ret = 1; ...; my $ret = 2; }

configure, *.in: dependent file rebuilds

configure.ac: substitute on src/mercury-plot, fix a bug where in 
 enable_stdio64 can end up blank leading to a weird message from
 /bin/sh during configuration

Makefile.am: add mercury-plot to the list of bin_SCRIPTS, add
  Plot/Mercury.pm to the list of perl modules

lintel-acinclude.in: change to using expanded_datadir to eliminate a
  configure warning and to continue to work properly when the autoconf
  team finally deprecates datadir.

--- a/configure.ac
+++ b/configure.ac
@@ -120,7 +120,7 @@ AC_ARG_ENABLE(stdio64,
   [  --enable-stdio64 enable the stdio64 routines on platforms that left them out ]
   [enable_stdio64=$enableval],
   [enable_stdio64=no])
-AM_CONDITIONAL(ENABLE_STDIO64, test $enable_stdio64 = yes)
+AM_CONDITIONAL(ENABLE_STDIO64, test "$enable_stdio64" = yes)
 
 ### The Random regression tests generates different output on different 
 ### machines (and possibly compilers) -- pick the appropriate file.
@@ -138,7 +138,7 @@ esac
 
 AC_SUBST(RANDOM_COMPARETO)
 
-AC_CONFIG_FILES([Makefile src/lintel-config src/lintel-acinclude include/Makefile src/Makefile src/batch-parallel])
+AC_CONFIG_FILES([Makefile src/lintel-config src/lintel-acinclude include/Makefile src/Makefile src/batch-parallel src/mercury-plot])
 
 EXPAND_VARIABLE
 expanded_datadir=`expand_variable $datadir`
