* Make boost compilation optional    * Add invariants that are only in effect if debugging is turned on    * Bugfix in autoconf files    * Sundry attempts to get things to work on HP-UX that eventually failed, but      keeping the fixes may prove useful in the future.    * Include the parent include directory in lintel-config so we can start the      migration over to using #include <Lintel/...>
Makefile.in: dependent file rebuild

com_hp_hpl_lintel.m4: add in function to determine if we have the
  boost includes.  Fiddle with how ldflags are specified on HP-UX

configure: dependent file rebuild

configure.ac: test if we have the boost includes

AssertBoost.H: add DEBUG_INVARIANT, enabled only if COMPILE_DEBUG is defined.

include/Makefile.am: if we are building with boost, include the header and 
  sources.

include/Makefile.in: dependent file rebuild

src/Makefile.am: remove indentation on libLintel_la_SOURCES
  definitions, otherwise, weirdly it doesn't seem to properly add the
  autoconf build bits to build the conditional sources.

src/Makefile.in: dependent file rebuild

StringUtil.C: minor fixes to improve compilation on HP-UX

lintel-config.in: Include flag fix from above, add --built-with-boost option

--- a/Makefile.in
+++ b/Makefile.in
@@ -163,6 +163,8 @@ STRIP = @STRIP@
 TCL_CFLAGS = @TCL_CFLAGS@
 TCL_LIBS = @TCL_LIBS@
 VERSION = @VERSION@
+WITH_BOOST_INCLUDES_FALSE = @WITH_BOOST_INCLUDES_FALSE@
+WITH_BOOST_INCLUDES_TRUE = @WITH_BOOST_INCLUDES_TRUE@
 WITH_GC_FALSE = @WITH_GC_FALSE@
 WITH_GC_TRUE = @WITH_GC_TRUE@
 WITH_HPUX_REPLACE_MEMORY_FALSE = @WITH_HPUX_REPLACE_MEMORY_FALSE@
