--- a/configure.ac
+++ b/configure.ac
@@ -50,7 +50,9 @@ AC_PROG_LIBTOOL
 AC_SUBST(LIBTOOL_DEPS)
 HPL_WITHLIB_TCL()
 HPL_WITHLIB_GC()
-
+AC_LANG(C++)
+HPL_WITH_BOOST_INCLUDES
+AC_LANG(C)
 # flags
 AC_SYS_LARGEFILE
 
