--- a/Makefile.am
+++ b/Makefile.am
@@ -13,3 +13,7 @@ SUBDIRS = include src
 aclocaldir = $(datadir)/aclocal
 aclocal_DATA = com_hp_hpl_lintel.m4
 
+# Magic to make autoreconf find com_hp_hpl_lintel.m4
+# Sadly, we can't use this in other packages because the proper -I depends
+# on where we are installing.
+ACLOCAL_AUTORECONF_FLAGS = -I.
